# tabcomp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: ARCHITECTURE.md
docs/modules/: config_manager.md  data_processor.md  file_handler.md  output_generator.md  user_interface.md
docs/modules/file_handler/: api.md  index.md  testing.md
examples/: advanced_usage.py  simple_comparison.py
src/tabcomp/data_processor/: __init__.py  comparator.py  comparison_strategies.py  config.py  difference_handlers.py  matcher.py  normalizer.py  utils.py  value_comparators.py
src/tabcomp/file_handler/: __init__.py  encoding.py  exceptions.py  parser.py  validator.py
tests/: __init__.py  conftest.py
tests/unit/test_file_handler/: README.md  __init__.py  conftest.py  test_encoding.py  test_integration.py  test_parser.py  test_validator.py
