[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = [
    "src"
]

[project]
name = "tabcomp"
version = "1.0.0"
requires-python = ">=3.10"  # Updated to support Python 3.10